syntax = "proto3";
option csharp_namespace = "DemoAndDiscourse.Contracts";
package DD;

import "google/protobuf/timestamp.proto";
import "Empty.proto";

message Vehicle {
    string Vin = 1;
    string Make = 2;
    string Model = 3;
    string LocationCode = 4;
}

message Vehicles {
    repeated Vehicle Elements = 1;
}

message VehicleRequest {
    oneof Identifier {
        string Vin = 1;
    }
}

service VehicleRead {
    rpc GetVehicle (VehicleRequest) returns (Vehicle) {
    }

    rpc GetAllVehicles (Empty) returns (Vehicles) {
    }

    rpc GetVehicleUpdates (Empty) returns (stream Vehicle) {
    }
}

service VehicleWrite {
    rpc AddVehicle (Vehicle) returns (Vehicle) {
    }

    rpc AddVehicles (stream Vehicle) returns (stream Vehicle) {
    }
}
